Fix a few stragglers

--- a/files/en-us/web/svg/attribute/crossorigin/index.html
+++ b/files/en-us/web/svg/attribute/crossorigin/index.html
@@ -18,11 +18,13 @@ browser-compat: api.SVGImageElement.crossOrigin
 <p>This table shows all possible keywords and their meaning:</p>
 
 <table class="standard-table">
+  <thead>
+    <tr>
+      <th>Keyword</th>
+      <th>Description</th>
+    </tr>
+  </thead>
 	<tbody>
-		<tr>
-			<td class="header">Keyword</td>
-			<td class="header">Description</td>
-		</tr>
 		<tr>
 			<td><code>anonymous</code></td>
 			<td>CORS requests for this element will have the credentials flag set to 'same-origin'.</td>
